--- a/DigitalBusinessCard/index.css
+++ b/DigitalBusinessCard/index.css
@@ -1,63 +1,79 @@
 * {
     box-sizing: border-box;
     margin:0;
+    padding:0;
 }
+
 body{
     font-family: Inter, sans-serif;
     width: 317px;
     height: 780px;
     background-color: #23252C;
+    color: #DCDCDC;
 }
+
+.profile{
+    width: 317px;
+    max-height: 317px;
+    object-fit: cover;
+}
+
 button{
     width: 115px;
-    height: auto;
     padding: 9px;
     font-size: 16px;
-    font-family: Inter, sans-serif;
+    font-family: inherit;
     margin-top: 15px;
     margin-bottom: 33px;
     border: none;
     border-radius: 7px;
     float:left
 }
+
 button.email{
     margin-right:17px;
 }
-.linkedin{
+
+button.linkedin{
     background-color:#5093E2;
     color:white;
 }
 
 .information, .about, .interests {
     background-color: #1A1B21;
-    color: #DCDCDC;
     padding: 0px 35px;
 }
-.about > p, .interests > p{
+
+.about p, .interests p{
     padding-top: 5px;
     padding-bottom: 24px;
 }
+
 .information{
     text-align: center;
 }
 
-.information > .name{
+.information .name{
     padding-top:21px;
     margin-bottom: 6px;
 }
-.information > .career{
+
+.information .career{
     color:#F3BF99;
     margin-bottom: 9px;
 }
+
 .footer{
     background-color: #161619;
     height:64px;
     display: flex;
     padding: 20px 12p;
 }
-.footer > a{
+
+.footer a{
     padding: 20px 12px;
 }
-.footer > .twitter{
+
+.footer .twitter{
     margin-left: 61px;
 }
